updated portfolio section

--- a/index.html
+++ b/index.html
@@ -137,15 +137,16 @@
     </div>
     <div class="portfolioFilter">
       <ul class="portfolioNav">
-        <li><a href="#" data-filter="*" class="current">All</a></li>
-        <li><a href="#" data-filter=".javascript">JavaScript</a></li>
-        <li><a href="#" data-filter=".react">React</a></li>
-        <li><a href="#" data-filter=".meteor">Meteor</a></li>
+        <li><a href="#" id="all" class="current">All</a></li>
+        <li><a href="#" id="javascript">jQuery</a></li>
+        <li><a href="#" id="react">React</a></li>
+        <li><a href="#" id="meteor">Meteor</a></li>
       </ul>
-      <div class="portfolioWrapper">
-      
-      </div>
     </div>
+    <div class="portfolioWrapper">
+      
+    </div>
+    <h3>For additional projects, please visit my <a class="gitHubReferal" href="https://github.com/lippyDesign">Git Hub <i class="fa fa-github" aria-hidden="true"></i></a> page</h3>
   </section>
   <!--protfolio end-->
   <!--contact start-->
@@ -156,24 +157,20 @@
         <p>Please feel free if you would like to have a chat.</p>
       </div>
     </div>
-    <div class="row mapArea">
-      <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/?ie=UTF8&amp;ll=-37.817682,144.957595&amp;spn=0.01134,0.026157&amp;t=m&amp;z=16&amp;output=embed"></iframe>
-    </div>
   </section>
   <section class="contactDetails">
     <div class="container">
       <!--contact info start-->
       <div class="col-xs-12 col-sm-3 col-md-4 col-lg-4">
         <h4>Contact details</h4>
-<p> <i class="fa fa-map-marker fa-lg"></i> Collins Street West Victoria 8007 Australia</p>
-        <p> <i class="fa fa-mobile fa-lg"></i> +1800 1234 56789</p>
-        <p> <i class="fa fa-envelope-o "></i> <a href="mailto:support@websitename.com">support@websitename.com</a></p>
-        <p> <i class="fa fa-link "></i> <a href="www.websitename.com">www.websitename.com</a></p>
+        <p> <i class="fa fa-map-marker fa-lg"></i> Santa Clara, CA</p>
+        <p> <i class="fa fa-mobile fa-lg"></i> +1 408 603 0004</p>
+        <p> <i class="fa fa-envelope-o "></i> <a href="mailto:volo_lipu@yahoo.com">volo_lipu@yahoo.com</a></p>
       </div>
       <!--contact info end-->
       <!--contact form start-->
       <div class="col-xs-12 col-sm-9 col-md-8 col-lg-8 conForm">
-        <h4>Shoot a message!</h4>
+        <h4>Send a message!</h4>
         <div id="message"></div>
         <form method="post" action="php/contact.php" name="cform" id="cform">
           <input name="name" id="name" type="text" class="col-xs-12 col-sm-6 col-md-6 col-lg-6" placeholder="Your name..." >
@@ -191,12 +188,10 @@
   <section class="footer" id="footer">
     <div class="container">
       <ul>
-        <li><a href="#"><i class="fa fa-twitter fa-2x"></i></a></li>
-        <li><a href="#"><i class="fa fa-facebook fa-2x"></i></a></li>
-        <li><a href="#"><i class="fa fa-linkedin fa-2x"></i></a></li>
-        <li><a href="#"><i class="fa fa-pinterest fa-2x"></i></a></li>
-        <li><a href="#"><i class="fa fa-dribbble fa-2x"></i></a></li>
-        <li><a href="#"><i class="fa fa-rss fa-2x"></i></a></li>
+        <li><a target="_blank" href="https://twitter.com/lippydesign"><i class="fa fa-twitter fa-2x"></i></a></li>
+        <li><a target="_blank" href="https://www.facebook.com/vlipunov"><i class="fa fa-facebook fa-2x"></i></a></li>
+        <li><a target="_blank" href="https://www.linkedin.com/in/volodymyr-lipunov-b3b48a52?trk=nav_responsive_tab_profile_pic"><i class="fa fa-linkedin fa-2x"></i></a></li>
+        <li><a target="_blank" href="https://github.com/lippyDesign"><i class="fa fa-github fa-2x"></i></a></li>
       </ul>
     </div>
   </section>
