--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title>Volodymyr Lipunov</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Volodymyr Lipunov Programming languages portfolio">
+	<meta name="author" content="Volodymyr Lipunov">
 <!--main style-->
 <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.css">
 <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
@@ -16,6 +18,8 @@
 <!--google font style-->
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,600,700,800,300' rel='stylesheet' type='text/css'>
 <!--font-family: 'Open Sans', sans-serif;-->
+<!-- favicon -->
+<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
 <!-- font css style-->
 <link rel="stylesheet" href="css/font-awesome.css">
 <!--for slider style-->
@@ -125,6 +129,10 @@
       <div class="heading" id="educationHeading">
         <h2>Education & Diplomas</h2>
         <p>What I have done in my academic career</p>
+      </div>
+      <div class="heading" id="educationHeadingCert">
+        <h2>Courses & Certificates</h2>
+        <p>How I further enhanced my academic knowledge</p>
       </div>
     </div>
   </section>
