updated header section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <title>Volodymyr Lipunov</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Volodymyr Lipunov Programming languages portfolio">
-	<meta name="author" content="Volodymyr Lipunov">
+<meta name="author" content="Volodymyr Lipunov">
 <!--main style-->
 <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.css">
 <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
@@ -23,7 +23,7 @@
 <!-- font css style-->
 <link rel="stylesheet" href="css/font-awesome.css">
 <!--for slider style-->
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/6.1.19/browser.js"></script>
 <noscript>
 <link rel="stylesheet" type="text/css" href="css/fallback.css" />
 </noscript>
@@ -93,8 +93,7 @@
         <div class=" col-xs-12 col-sm-12 col-md-7 col-lg-7">
           <h3>Volodymyr Lipunov</h3>
           <h4 class="subHeading">Webdesigner & Web Developer from Santa Clara, CA</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.  cillum dolore eu fugiat nulla pariatur. olore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-          <p>nulla pariatur.uis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. olore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+          <p>I am a law enforcement officer with an impressive history of dedication and leadership with a passion for technology and programming languages. I am able to work in stressful situations with meticulous attention to detail. I interact effectively with citizens of diverse cultural background and social levels.  I’m looking to start a new and challenging career in high tech industry utilizing my programming skills.</p>
           <a class="bntDownload button" download href="resume.docx" hidden>Download Printable Resume</a> </div>
         <div class=" col-xs-12 col-sm-12 col-md-4 col-lg-4 col-md-offset-1 col-lg-offset-1 proPic">
           <img src="images/image1.jpg" alt="face image" class="img-circle topmar">
@@ -206,6 +205,7 @@
   <!--footer end-->
 </div>
 <!--wrapper end-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/6.1.19/browser.js"></script>
 <!--modernizr js-->
 <script type="text/javascript" src="js/modernizr.custom.26633.js"></script>
 <!--jquary min js-->
